hw7 completed
